2023-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test02-file-name-dissect)
	(tramp-test02-file-name-dissect-simplified)
	(tramp-test02-file-name-dissect-separate): Adapt tests.

2023-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (all): Use function read syntax where appropriate.
	(tramp-test39-detect-external-change): Let-bind
	`read-from-minibuffer' instead of `yes-or-no-p'.

2023-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-interactive-file-name-completion):
	Adapt test.

2023-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-display-escape-sequence-regexp): Dont't declare.
	(tramp-test28-process-file, tramp-test32-shell-command):
	Use `ansi-color-control-seq-regexp'.
	(tramp-test45-asynchronous-requests): Adapt test.

2023-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-use-connection-share): Declare.
	(tramp--test-putty-p): New defun.
	(tramp-test45-asynchronous-requests): Tweak test.

2023-05-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive--test-emacs28-p): New defun.
	(tramp-archive-test48-auto-load): Extend test.

2023-05-13  Mattias Engdegård  <mattiase@acm.org>

	* tramp-archive-tests.el (tramp-archive-test16-directory-files):
	Don't mutate.

2023-05-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test48-auto-load)
	(tramp-archive-test48-delay-load): Rename.

	* tramp-tests.el (tramp-test09-insert-file-contents): Adapt test.
	(tramp-test45-asynchronous-requests): Remove :unstable tag.
	Adapt test.
	(tramp-test48-threads): Remove.
	(tramp-test48-auto-load, tramp-test48-delay-load)
	(tramp-test48-recursive-load, tramp-test48-remote-load-path)
	(tramp-test49-unload): Rename.

2023-05-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (tramp-archive-test44-user-group-ids):
	Fix docstring.
